fixed navbar going out of screen in landscape on mobile

--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -119,3 +119,9 @@
     margin-bottom: 2rem;
   }
 }
+
+@media screen and (max-width: 960px) {
+  .cards > h1 {
+    margin-top: -130px;
+  }
+}
