--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -56,10 +56,14 @@ video {
 }
 
 @media screen and (max-width: 960px) {
+  .hero-container {
+    transform: translate(0%, -16%);
+  }
+
   .hero-container > h1 {
     font-size: 50px;
     /* margin-top: -100px; */
-    margin-top: -70px;
+    margin-top: 40px;
   }
 
   .hero-container > p {
